# echomini-tools

./: README.md  main.py  pyproject.toml
.github/workflows/: build.yml
echomini_fix/: cli.py  gui.py  main.py  tests.py
echomini_fix/scripts/: art.py
echomini_tools/: cli.py  gui.py  main.py  tests.py
echomini_tools/gui/: LogWindow.py  PickerBanner.py  RunBtn.py  RunFooter.py  Tool.py  gui.py
echomini_tools/scripts/: art.py  dir.py  flac.py  lrc.py
src/echomini_tools/: cli.py  main.py  tests.py
src/echomini_tools/gui/: RunFooter.py  Tool.py  gui.py
src/echomini_tools/scripts/: art.py  dir.py
