[project]
name = "echomini-tools"
version = "1.0.0"
dependencies = ["mutagen", "Pillow", "PySide6", "requests", "pathlib", "ffmpeg-python"]

[project.scripts]
echomini-tools = "echomini_tools.main:main"

[build-system] 
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"echomini_tools.gui.icons" = ["*.svg"]
